# SKA2

./: .gitignore  CMakeLists.txt  CMakeListsDebug.txt  Makefile  cmake_install.cmake  demofile2.txt  environment.yml  intel_ska.yml  setup.py  ska.prof
.github/workflows/: python-package-conda.yml
build_old/lib.linux-x86_64-cpython-310/ska/: __main__.py
build_old/lib.linux-x86_64-cpython-311/ska/: __main__.py
build_old/temp.linux-x86_64-3.10/: CMakeCache.txt  Makefile  cmake_install.cmake
build_old/temp.linux-x86_64-cpython-310/: CMakeCache.txt  Makefile  cmake_install.cmake
build_old/temp.linux-x86_64-cpython-311/: CMakeCache.txt
build_old/temp.macosx-10.9-x86_64-cpython-310/: CMakeCache.txt  Makefile  cmake_install.cmake
ska/: __main__.py
src/: api.cpp  api.hpp  old_code.cpp  progressbar.h  progressbar.hpp  robin_hood.h  robin_hood_cereal.h  ska.hpp  ska_align.cpp  ska_bindings.cpp  ska_fasta.cpp
tests/: 10_1.fa  10_2.fa  10_3.fa  10_test_cluster.txt  compare_kmers.py  plot_shared_kmers.py  rolling_kmer.py  test_align.py  test_alignment.py  test_fasta.py  variant_alignment.aln
